# btest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: btest.h  btest.hpp  embtest.hpp
src/: btest_impl.cpp  btest_main.cpp  embtest_impl.cpp
tests/: main.cpp  sample_1.cpp  sample_2.cpp  test_assertions_fail.cpp  test_assertions_pass.cpp  test_disabled.cpp  test_fixture.cpp  test_other_failures.cpp
